# LITRIS

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CLAUDE_SUPPLEMENTAL.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  README.md  STATE.md  codex.toml  config.example.yaml  config.yaml  config.yaml.example  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
docs/: dimension_profiles.md  litris_redesign_summary_2026-03.md  mcp_troubleshooting.md  portable_dimensions_release_notes_2026-04.md  query_guide.md  requirements.txt  troubleshooting.md  usage.md
profiles/: stp_cas.yaml
proposals/: mcp_project_plan.md  mcp_technical_specification.md  project_plan.md  technical_specification.md
scripts/: _estimate_tokens.py  apply_orphan_parent_items.py  backfill_discipline_tags.py  batch_extract.py  batch_loop.py  benchmark_embeddings.py  benchmark_glm_ocr.py  benchmark_opendataloader.py  build_index.py  classify_existing.py  cleanup_cas_mrna_collection.py  compare_providers.py  council_comparison.py  dimensions.py  export_results.py  extract_session_knowledge.py  gap_analysis.py  import_pdf_folder.py  manage_opendataloader_hybrid.py  mcp_launcher.cmd  merge_web_search_results.py  preextract_text.py  preflight.py  preflight_analysis.py  process_orphan_pdfs.py  query_index.py  rebuild_raptor_similarity.py  repair_zotero_metadata.py  request_pause.py  research_digest.py  research_questions.py  reset_old_schema.py  run_discord_bot.py  run_gap_fill.py  smoketest_bibtex.py  smoketest_config_migration.py  smoketest_endnote.py  smoketest_gap_analysis.py  smoketest_gemini.py  smoketest_local_llm.py  (+10 more)
src/: __init__.py  config.py  config_migration.py
tests/: __init__.py  conftest.py  (+56 more)
(+186 files in other folders)
